[package]
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2021"
name = "glacier"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphanumeric-sort = "1.4.0"
anyhow = "1.0.37"
rayon = "1.5.0"
tempfile = "3.1.0"

[workspace]
members = [
  "autofix",
]

[patch.crates-io]
glacier = {path = "."}
